[tool.poetry]
name = "fjord"
version = "0.1.0"
description = "The backend server used by skiff and lagoon."
authors = ["NoahCardoza <noahcardoza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.4"
aiohttp = "^3.8.3"
beanie = "^1.17.0"
motor = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
typer = "^0.7.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
